<resources>
    <string name="app_name">PhoneTroller</string>
    <string name="a_button">A</string>
    <string name="b_button">B</string>
    <string name="x_button">X</string>
    <string name="y_button">Y</string>
    <string name="lt_button">LT</string>
    <string name="rt_button">RT</string>
    <string name="accel_button">Accelerate</string>
    <string name="brake_button">Brake</string>
    <string name="settings_button">Settings</string>
    <string name="settings_text_view">SETTINGS</string>
    <string name="start_button">Start</string>
    <string name="back_button">Back</string>
</resources>
