<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.david.phonetroller.MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_button"
        android:layout_marginLeft="@dimen/menu_buttons_margin3"
        android:id="@+id/button" />

    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/right_dpad_button"
        android:layout_marginLeft="@dimen/dpad_horizontal_margin1"
        android:layout_below="@+id/up_dpad_button"
        android:background="@drawable/rightarrow"
        />

    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/left_dpad_button"
        android:layout_below="@+id/up_dpad_button"
        android:background="@drawable/leftarrow"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/up_dpad_button"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="50dp"
        android:background="@drawable/uparrow"
         />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_button"
        android:layout_marginLeft="@dimen/menu_buttons_margin2"
        android:id="@+id/button2"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_button"
        android:layout_marginLeft="@dimen/menu_buttons_margin1"
        android:id="@+id/button3"
        />

    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/down_dpad_button"
        android:layout_marginLeft="51dp"
        android:background="@drawable/downarrow"
        android:layout_marginTop="@dimen/dpad_vertical_margin3"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brake_button"
        android:id="@+id/brake_button"
        android:layout_marginTop="420dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accel_button"
        android:id="@+id/accel_button"
        android:layout_marginTop="420dp"
        android:layout_marginLeft="240dp"/>

</RelativeLayout>
