<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_text_view"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginLeft="120dp"
       />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/abuttonpic"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="55dp"
        android:id="@+id/abuttonmap">
        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/a_button"
            android:id="@+id/abutton_aradio"
            android:checked="true"/>
        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/b_button"
            android:id="@+id/bbutton_aradio"/>
        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/x_button"
            android:id="@+id/xbutton_aradio"/>
        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/y_button"
            android:id="@+id/ybutton_aradio"/>
        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/lt_button"
            android:id="@+id/ltbutton_aradio"/>
        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/rt_button"
            android:id="@+id/rtbutton_aradio"/>
    </RadioGroup>


    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bbuttonpic"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="180dp"
        android:id="@+id/bbuttonmap">
        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/bbutton_bradio"
            android:text="@string/b_button"
            android:checked="true"/>
        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/abutton_bradio"
            android:text="@string/a_button" />
        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/xbutton_bradio"
            android:text="@string/x_button"/>
        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/y_button"
            android:id="@+id/ybutton_bradio"/>
        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/lt_button"
            android:id="@+id/ltbutton_bradio"/>
        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/rt_button"
            android:id="@+id/rtbutton_bradio"/>
    </RadioGroup>


    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/xbuttonpic"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="300dp"
        android:id="@+id/xbuttonmap">
        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/x_button"
            android:id="@+id/xbutton_xradio"
            android:checked="true"/>
        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/a_button"
            android:id="@+id/abutton_xradio"/>
        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/b_button"
            android:id="@+id/bbutton_xradio"/>
        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/y_button"
            android:id="@+id/ybutton_xradio"/>
        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/lt_button"
            android:id="@+id/ltbutton_xradio"/>
        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/rt_button"
            android:id="@+id/rtbutton_xradio"/>
    </RadioGroup>


    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"

        android:layout_marginTop="300dp"
        android:background="@drawable/ybuttonpic"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="50dp"
        android:id="@+id/ybuttonmap">
        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/y_button"
            android:id="@+id/ybutton_yradio"
            android:checked="true"/>
        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/a_button"
            android:id="@+id/abutton_yradio"/>
        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/bbutton_yradio"
            android:text="@string/b_button"/>
        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/x_button"
            android:id="@+id/xbutton_yradio"/>
        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/lt_button"
            android:id="@+id/ltbutton_yradio"/>
        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/rt_button"
            android:id="@+id/rtbutton_yradio"/>
    </RadioGroup>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lt_button"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="120dp"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="180dp"
        android:id="@+id/ltbuttonmap">
        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/lt_button"
            android:checked="true"
            android:id="@+id/ltbutton_ltradio"/>
        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/a_button"
            android:id="@+id/abutton_ltradio"/>
        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/b_button"
            android:id="@+id/bbutton_ltradio"/>
        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/x_button"
            android:id="@+id/xbutton_ltradio"/>
        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/y_button"
            android:id="@+id/ybutton_ltradio"/>
        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/rt_button"
            android:id="@+id/rtbutton_ltradio"/>
    </RadioGroup>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rt_button"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="250dp"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="300dp"
        android:id="@+id/rtbuttonmap">
        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/rtbutton_rtradio"
            android:checked="true"
            android:text="@string/rt_button"/>
        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/a_button"
            android:id="@+id/abutton_rtradio"/>
        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/b_button"
            android:id="@+id/bbutton_rtradio"/>
        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/x_button"
            android:id="@+id/xbutton_rtradio"/>
        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/y_button"
            android:id="@+id/ybutton_rtradio"/>
        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/lt_button"
            android:id="@+id/ltbutton_rtradio"/>
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="UPDATE"
        android:id="@+id/updateButton"
        android:layout_marginTop="245dp"
        android:layout_marginLeft="145dp"/>




</RelativeLayout>